src/test/ui/suggestions/confuse-field-and-method/private-field.stderr
error[E0599]: no method named `dog_age` found for type `animal::Dog` in the current scope
  --> $DIR/private-field.rs:26:23
   |
26 |     let dog_age = dog.dog_age();
   |                       ^^^^^^^ private field, not a method

error: aborting due to previous error

